# pitchspeed

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
.superpowers/brainstorm/47915-1773992710/: .server-stopped  ui-mockup.html  waiting.html
docs/superpowers/plans/: 2026-03-20-pitchspeed-implementation.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  types.rs
src-tauri/src/audio/: decoder.rs  encoder.rs  mod.rs  pitch_detect.rs  processor.rs
src/lib/: commands.ts
src/lib/components/: ActionButtons.svelte  DropZone.svelte  KeyDisplay.svelte  ParameterSlider.svelte
src/lib/stores/: audio.ts
src/routes/: +layout.ts  +page.svelte
